--- a/.github/workflows/weather-app-build-push.yaml
+++ b/.github/workflows/weather-app-build-push.yaml
@@ -3,12 +3,12 @@ name: weather-app-build-push-master
 on:
   push:
     branches: [ main ]
-   # paths: [ microservices-src-dir/weather-app/** ]
 
 env:
   AWS_REGION: us-east-1  # AWS Region where ECR is hosted
   ECR_REPOSITORY: microservice2  # Push docker image to this ECR repository one
-  APP_DIR: microservices-src-dir/weather-app # Directory containing Dockerfile & app code
+  APP_DIR: weather-app # Directory containing Dockerfile and app code
+  MANIFEST_REPO: kubernetes-services # Repo containing Kubernetes manifest files
   MANIFEST_FILE_PATH: kubernetes-manifests/weather-app-manifest.yaml # Kubernetes manifest file for the application
 
 jobs:
