--- a/.github/workflows/weather-app-build-push.yaml
+++ b/.github/workflows/weather-app-build-push.yaml
@@ -7,7 +7,7 @@ on:
 env:
   AWS_REGION: us-east-1  # AWS Region where ECR is hosted
   ECR_REPOSITORY: microservice2  # Push docker image to this ECR repository one
-  APP_DIR: weather-app # Directory containing Dockerfile and app code
+  APP_DIR: weather-app # Directory containing Dockerfile & app code
   MANIFEST_REPO: kubernetes-services # Repo containing Kubernetes manifest files
   MANIFEST_FILE_PATH: kubernetes-manifests/weather-app-manifest.yaml # Kubernetes manifest file for the application
 
